@@ -1,11 +1,13 @@
 AUX icon/nvidia-settings.desktop 194 RMD160 a59dae254f65d9665118629b489b33b0fd87c8d5 SHA1 eac0735769b28d7c217d6ab15a3dca3e2adff9b1 SHA256 af43af5db203c1acf9301fa7fb285a7fdfe5aab5ce1aa30a239fd7db1b588168
 AUX icon/nvidia-settings.png 3790 RMD160 a0a8c319ca4b0100d2b7502b6a3dba20a3dc71b9 SHA1 ff485bf300c6e0c56b3d1f08ee87e4d9a425db65 SHA256 171e2d20dfe7fbbb86bf9d3c0bb22909529b351fb06b614018a9597ff2456f12
+DIST nvidia-settings-180.60.tar.gz 1342058 RMD160 28b88b149eae31ab2da897d2ade8bbe75e5086f6 SHA1 ca43e2834c859d18f387bdae20f8b5be65c010e1 SHA256 b62d12b864559ab57ca837111dd4ad7ae53850349a3f5eacc804ad0b517fb477
 DIST nvidia-settings-185.18.04.tar.gz 1347205 RMD160 f882ce07a1022fc354031ff3a0f67c05c9ae4f2b SHA1 9fd3cc81219b1adda86ce0a5bb1965f2d4352189 SHA256 15865e6630ca48b049f04a01bf7e00565dc0e85979d87500f056b942d2ddb44f
 DIST nvidia-settings-185.18.08.tar.gz 1347259 RMD160 bf45ba984d767a2ec2a156a63858f6c02346ae1f SHA1 5891ec8753154d419d9ff1e84c2acb8f20c3b8af SHA256 b043c00d9703bfccfe7f21241ab99701bba85aa2c37d190dba2c9ec84d38dba4
 DIST nvidia-settings-185.18.10.tar.gz 1348223 RMD160 b4d17ee8720a7c0495e77f20d35536aba9833bca SHA1 710f63441012e9e894c3dbbfe9309fba5e6f99c1 SHA256 94dcbedc569f49f2384f91ac94010bc6c13f50fe1008704f49811b76fdc851e6
 DIST nvidia-settings-185.19.tar.gz 1347210 RMD160 4d2bc94fb73574f607685f7c8a3b1f06e6cafd75 SHA1 9e29bf0319bf9ea65d9c054e15521a5510b1a5c0 SHA256 5e0cb24c1a53f679bad923b5be9145fc7425af16032072f181b9034da91b499a
+EBUILD nvidia-settings-180.60.ebuild 1916 RMD160 8435802a3d241f2260e57db9eac42276566839b5 SHA1 a1418d54aedb1a44a0f44f2fea48dc571813bb97 SHA256 024b08f5bf3904e1ee1a66f951edb282d6c3be7ced86ec5cef9bb0a97b462b0d
 EBUILD nvidia-settings-185.18.04.ebuild 1916 RMD160 8435802a3d241f2260e57db9eac42276566839b5 SHA1 a1418d54aedb1a44a0f44f2fea48dc571813bb97 SHA256 024b08f5bf3904e1ee1a66f951edb282d6c3be7ced86ec5cef9bb0a97b462b0d
 EBUILD nvidia-settings-185.18.08.ebuild 1916 RMD160 8435802a3d241f2260e57db9eac42276566839b5 SHA1 a1418d54aedb1a44a0f44f2fea48dc571813bb97 SHA256 024b08f5bf3904e1ee1a66f951edb282d6c3be7ced86ec5cef9bb0a97b462b0d
 EBUILD nvidia-settings-185.18.10.ebuild 1916 RMD160 8435802a3d241f2260e57db9eac42276566839b5 SHA1 a1418d54aedb1a44a0f44f2fea48dc571813bb97 SHA256 024b08f5bf3904e1ee1a66f951edb282d6c3be7ced86ec5cef9bb0a97b462b0d
 EBUILD nvidia-settings-185.19.ebuild 1916 RMD160 8435802a3d241f2260e57db9eac42276566839b5 SHA1 a1418d54aedb1a44a0f44f2fea48dc571813bb97 SHA256 024b08f5bf3904e1ee1a66f951edb282d6c3be7ced86ec5cef9bb0a97b462b0d
-MISC ChangeLog 706 RMD160 7541014579ef2d4e459c0c7c151bb5a6a0145a3b SHA1 563b5c1d6fe29119103f7ea1a94b3ae6b05b31b2 SHA256 ef2a38e1d0226c47f1ff5c864df65b320fe0638f0c0c0c9184c6a23d20eb1bc8
+MISC ChangeLog 885 RMD160 c81200c4c9865eab3cb1ffac296c3fd311688b5b SHA1 2bfcebd2e0fed91c1aa7cf7887ec1dee68d0cf0c SHA256 24dc1d730d0bd75729768c91fe125caf54d50ea870e8fe7288994e72c8a17a9b
