@@ -2,6 +2,12 @@
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*nvidia-settings-180.60 (19 May 2009)
+
+  19 May 2009; Alex Alexander (wired) <alex.alexander@gmail.com>
+  +nvidia-settings-180.60.ebuild:
+  nvidia-settings for prerelease 180.60
+
 *nvidia-settings-185.18.10 (19 May 2009)
 *nvidia-settings-185.18.08 (19 May 2009)
 *nvidia-settings-185.18.04 (19 May 2009)
